wxc/include/ewxw/wxc_glue.h

/* ELJDragDataObject */
TClassDef(ELJDragDataObject)
TClass(ELJDragDataObject) ELJDragDataObject_Create( void* _obj, void* _fmt, void* _func1, void* _func2, void* _func3 );
void       ELJDragDataObject_Delete( TSelf(ELJDragDataObject) _obj );
/* ELJDropTarget */
TClassDefExtend(ELJDropTarget,wxDropTarget)
TClass(ELJDropTarget) ELJDropTarget_Create( void* _obj );
void       ELJDropTarget_Delete( TSelf(ELJDropTarget) _obj );
void       ELJDropTarget_SetOnData( TSelf(ELJDropTarget) _obj, void* _func );
void       ELJDropTarget_SetOnDragOver( TSelf(ELJDropTarget) _obj, void* _func );
void       ELJDropTarget_SetOnDrop( TSelf(ELJDropTarget) _obj, void* _func );
void       ELJDropTarget_SetOnEnter( TSelf(ELJDropTarget) _obj, void* _func );
void       ELJDropTarget_SetOnLeave( TSelf(ELJDropTarget) _obj, void* _func );
/* ELJFileDropTarget */
TClassDefExtend(ELJFileDropTarget,wxFileDropTarget)
TClass(ELJFileDropTarget) ELJFileDropTarget_Create( void* _obj, void* _func );
void       ELJFileDropTarget_Delete( TSelf(ELJFileDropTarget) _obj );
void       ELJFileDropTarget_SetOnData( TSelf(ELJFileDropTarget) _obj, void* _func );
void       ELJFileDropTarget_SetOnDragOver( TSelf(ELJFileDropTarget) _obj, void* _func );
void       ELJFileDropTarget_SetOnDrop( TSelf(ELJFileDropTarget) _obj, void* _func );
void       ELJFileDropTarget_SetOnEnter( TSelf(ELJFileDropTarget) _obj, void* _func );
void       ELJFileDropTarget_SetOnLeave( TSelf(ELJFileDropTarget) _obj, void* _func );
/* ELJTextDropTarget */
TClassDefExtend(ELJTextDropTarget,wxTextDropTarget)
TClass(ELJTextDropTarget) ELJTextDropTarget_Create( void* _obj, void* _func );
void       ELJTextDropTarget_Delete( TSelf(ELJTextDropTarget) _obj );
void       ELJTextDropTarget_SetOnData( TSelf(ELJTextDropTarget) _obj, void* _func );
void       ELJTextDropTarget_SetOnDragOver( TSelf(ELJTextDropTarget) _obj, void* _func );
void       ELJTextDropTarget_SetOnDrop( TSelf(ELJTextDropTarget) _obj, void* _func );
void       ELJTextDropTarget_SetOnEnter( TSelf(ELJTextDropTarget) _obj, void* _func );
void       ELJTextDropTarget_SetOnLeave( TSelf(ELJTextDropTarget) _obj, void* _func );
/* wxBitmapDataObject */
TClassDefExtend(wxBitmapDataObject,wxDataObjectSimple)
TClass(wxBitmapDataObject) BitmapDataObject_Create( TClass(wxBitmap) _bmp );
TClass(wxBitmapDataObject) BitmapDataObject_CreateEmpty(  );
void       BitmapDataObject_Delete( TSelf(wxBitmapDataObject) _obj );
void       BitmapDataObject_GetBitmap( TSelf(wxBitmapDataObject) _obj, TClassRef(wxBitmap) _bmp );
void       BitmapDataObject_SetBitmap( TSelf(wxBitmapDataObject) _obj, TClass(wxBitmap) _bmp );
TClass(wxDataObjectComposite) wxDataObjectComposite_Create(  );
void       wxDataObjectComposite_Delete( TSelf(wxDataObjectComposite) _obj );
void       DropSource_Delete( TSelf(wxDropSource) _obj );
int        DropSource_DoDragDrop( TSelf(wxDropSource) _obj, int _move );
/* wxDropTarget */
TClassDef(wxDropTarget)
void       wxDropTarget_GetData( TSelf(wxDropTarget) _obj );
void       wxDropTarget_SetDataObject( TSelf(wxDropTarget) _obj, TClass(wxDataObject) _dat );
TClass(wxFileDataObject) FileDataObject_Create( TClass(wxList) _lst, int _cnt );
void       FileDataObject_Delete( TSelf(wxFileDataObject) _obj );
int        FileDataObject_GetFilenames( TSelf(wxFileDataObject) _obj, TClass(wxList) _lst );
/* wxTextDataObject */
TClassDefExtend(wxTextDataObject,wxDataObjectSimple)
TClass(TextDataObject) TextDataObject_Create( TStringVoid _txt );
void       TextDataObject_Delete( TSelf(TextDataObject) _obj );